--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
 
-    <title>Tea Cosy</title>
+    <title>Tea Cozy</title>
   </head>
 
   <body>
@@ -42,9 +42,99 @@
 
 </div>
 
+<!--Products -->
+
+<div class="products">
+    <div class="products-text">
+      <h2>Tea of the Month</h2>
+      <h4>What's Steeping at The Tea Cozy?</h4>
+    </div>
+</div>
+
+    <div class="product-images">
+      <div class="photo">
+        <img src="resources/img-berryblitz.jpg" height="200px" width="300px">
+        <span>Fall Berry Blitz Tea</span>
+      </div>
+
+      <div class="photo">
+        <img src="resources/img-spiced-rum.jpg" height="200px" width="300px">
+        <span>Spiced Rum Tea</span>
+      </div>
+
+      <div class="photo">
+        <img src="resources/img-donut.jpg" height="200px" width="300px">
+        <span>Seasonal Donuts</span>
+      </div>
+
+      <div class="photo">
+        <img src="resources/img-myrtle-ave.jpg" height="200px" width="300px">
+        <span>Myrtle Ave Tea</span>
+      </div>
+
+      <div class="photo">
+        <img src="resources/img-bedford-bizarre.jpg" height="200px" width="300px">
+        <span>Bedford Bizarre Tea</span>
+      </div>
+
+    </div>
+
+
+<!-- Locations -->
+
+<div class="locations">
+  <div class="location-text">
+    <h2>Locations</h2>
+  </div>
+
+  <div class="text-boxes">
+    <div class="box">
+      <div class="box-text">
+      <h3>Downtown</h3>
+      <p>384 West 4th St</p>
+      <p>Suite 108</p>
+      <p>Portland, Maine</p>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="box-text">
+      <h3>East Bayside</h3>
+      <p>3433 Phisherman's Avenue</p>
+      <p>(Northwest Corner)</p>
+      <p>Portland, Maine</p>
+      </div>
+    </div>
+
+    <div class="box-r">
+      <div class="box-text">
+      <h3>Oakdale</h3>
+      <p>515 Crescent Avenue</p>
+      <p>Second Floor</p>
+      <p>Portland, Maine</p>
+      </div>
+    </div>
+
+  </div>
+
+ </div> 
+
+ <!-- Contact -->
+
+ <div class="contact">
+
+ <h3>The Tea Cozy</h3>
+ <br>
+ <h5>contact@theteacozy.com</h5>
+ <br>
+<h5>917-555-8904</h5>
+
+</div>
+
+<div class="copyright">
+copyright Tea Cozy 2017
+</div>
 	
-
-
 
 
 
