--- a/index.html
+++ b/index.html
@@ -3,144 +3,83 @@
   <head>
     <meta charset="utf-8">
 
-    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css" href="resources/css/reset.css">
 
-    <title>Tea Cozy</title>
+    <title>Secret Agent Supply Inc.</title>
   </head>
 
   <body>
 
- <!-- Header -->
+  <div class="wrapper">
 
- <header>
+<!-- Header -->
+      <header>
 
- 	<div class="logo">
- 		<img src="resources/img-tea-cozy-logo.png" height="50px">
- 	</div>
+        <div class="logo">
+          <img src="resources/logo.png">
+        </div>
 
- 	<nav>
- 		<span><a href="#">Mission</a></span>
- 		<span><a href="#">Featured Tea</a></span>
- 		<span><a href="#">Locations</a></span>
-
- 	</nav>
-
- </header>
+        <div class="header-text">
+         <p>SECRET AGENT SUPPLY INC.</p> 
+        </div>
+      </header>
 
 
+<!-- Banner -->     
 
- <!--Banner -->
+    <div class="banner">
 
-<div class="banner">
-    <div class="text">
-      <h2>Our Mission</h2>
-      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-    </div>
+      <div class="text-box">
 
+      <div class="text-arrive">
+        <p>NEW ARRIVAL</p>
+        <h2>SPORT BIKES AND MOTOCYCLE</h2>
+      </div> 
 
-    </div>
+    </div>  
 
-</div>
-
-<!--Products -->
-
-<div class="products">
-    <div class="products-text">
-      <h2>Tea of the Month</h2>
-      <h4>What's Steeping at The Tea Cozy?</h4>
-    </div>
-</div>
-
-    <div class="product-images">
-      <div class="photo">
-        <img src="resources/img-berryblitz.jpg" height="200px" width="300px">
-        <span>Fall Berry Blitz Tea</span>
-      </div>
-
-      <div class="photo">
-        <img src="resources/img-spiced-rum.jpg" height="200px" width="300px">
-        <span>Spiced Rum Tea</span>
-      </div>
-
-      <div class="photo">
-        <img src="resources/img-donut.jpg" height="200px" width="300px">
-        <span>Seasonal Donuts</span>
-      </div>
-
-      <div class="photo">
-        <img src="resources/img-myrtle-ave.jpg" height="200px" width="300px">
-        <span>Myrtle Ave Tea</span>
-      </div>
-
-      <div class="photo">
-        <img src="resources/img-bedford-bizarre.jpg" height="200px" width="300px">
-        <span>Bedford Bizarre Tea</span>
-      </div>
 
     </div>
 
+<!-- Nav Bar -->
 
-<!-- Locations -->
+  <nav>
+    <span><a href="#">Eyewear</a></span>
+    <span><a href="#">Apparel</a></span>
+    <span><a href="#">Gadgets</a></span>
+    <span><a href="#">Vehicles</a></span>
+    <span><a href="#">Clases</a></span>
+    <span><a href="#">Contact</a></span>
+  </nav>    
 
-<div class="locations">
-  <div class="location-text">
-    <h2>Locations</h2>
-  </div>
+<!--items -->
 
-  <div class="text-boxes">
-    <div class="box">
-      <div class="box-text">
-      <h3>Downtown</h3>
-      <p>384 West 4th St</p>
-      <p>Suite 108</p>
-      <p>Portland, Maine</p>
+  <div class="items">
+
+    <div class="products">
+      <img src="resources/pen.png" height="165px" width="165px">
+      <div class="text-products"><p>Exploding Pen</p>
+      </div>  
+    </div>
+
+    <div class="products"> 
+      <img src="resources/watch.png" height="165px" width="165px">
+      <div class="text-products"><p>Cellular Watch</p> 
       </div>
     </div>
 
-    <div class="box">
-      <div class="box-text">
-      <h3>East Bayside</h3>
-      <p>3433 Phisherman's Avenue</p>
-      <p>(Northwest Corner)</p>
-      <p>Portland, Maine</p>
-      </div>
-    </div>
+    <div class="products">
+      <img src="resources/glasses.png" height="165px" width="165px">
+      <div class="text-products"><p>Thermal Glasses</p></div>
 
-    <div class="box-r">
-      <div class="box-text">
-      <h3>Oakdale</h3>
-      <p>515 Crescent Avenue</p>
-      <p>Second Floor</p>
-      <p>Portland, Maine</p>
-      </div>
     </div>
 
   </div>
 
- </div> 
 
- <!-- Contact -->
 
- <div class="contact">
-
- <h3>The Tea Cozy</h3>
- <br>
- <h5>contact@theteacozy.com</h5>
- <br>
-<h5>917-555-8904</h5>
 
 </div>
-
-<div class="copyright">
-copyright Tea Cozy 2017
-</div>
-	
-
-
-
-
-
-
 
   </body>
 </html>
